type text a email en email

--- a/veterinaria/consultas.html
+++ b/veterinaria/consultas.html
@@ -98,7 +98,7 @@
                                     placeholder="Apellido">
                             </div>
                             <div class="col">
-                                <input id="email" type="text" name="email" class="form-control" 
+                                <input id="email" type="email" name="email" class="form-control" 
                                 placeholder="Email">
                             </div>
                         </div>
