se corrigo nav links

--- a/veterinaria-fullstack/frontend/duenos.html
+++ b/veterinaria-fullstack/frontend/duenos.html
@@ -29,16 +29,16 @@
                 <div class="collapse navbar-collapse" id="navbarColor01">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/veterinaria/index.html">Mascotas</a>
+                            <a class="nav-link active" aria-current="page" href="/veterinaria-fullstack/frontend/index.html">Mascotas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/veterinaria/veterinarias.html">Veterinari@s</a>
+                            <a class="nav-link" href="/veterinaria-fullstack/frontend/veterinarias.html">Veterinari@s</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/veterinaria/consultas.html">Consultas</a>
+                            <a class="nav-link" href="/veterinaria-fullstack/frontend/consultas.html">Consultas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/veterinaria/duenos.html">Dueños</a>
+                            <a class="nav-link" href="/veterinaria-fullstack/frontend/duenos.html">Dueños</a>
                         </li>
                     </ul>
                     <form class="d-flex">
