--- a/veterinaria-fullstack/frontend/consultas.html
+++ b/veterinaria-fullstack/frontend/consultas.html
@@ -21,7 +21,7 @@
         <!-- INICIO NAV -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/veterinaria/index.html">Veterinaria</a>
+                <a class="navbar-brand" href="/veterinaria-fullstack/frontend/index.html">Veterinaria</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
                     aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -32,13 +32,13 @@
                             <a class="nav-link active" aria-current="page" href="/veterinaria/index.html">Mascotas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/veterinaria/veterinarias.html">Veterinari@s</a>
+                            <a class="nav-link" href="/veterinaria-fullstack/frontend/index.html">Veterinari@s</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/veterinaria/consultas.html">Consultas</a>
+                            <a class="nav-link" href="/veterinaria-fullstack/frontend/consultas.html">Consultas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/veterinaria/duenos.html">Dueños</a>
+                            <a class="nav-link" href="/veterinaria-fullstack/frontend/duenos.html">Dueños</a>
                         </li>
                     </ul>
                     <form class="d-flex">
