se corrigo links nav y js

--- a/veterinaria-fullstack/frontend/duenos.html
+++ b/veterinaria-fullstack/frontend/duenos.html
@@ -21,7 +21,7 @@
         <!-- INICIO NAV -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/veterinaria/index.html">Veterinaria</a>
+                <a class="navbar-brand" href="/veterinaria-fullstack/frontend/index.html">Veterinaria</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
                     aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -140,7 +140,7 @@
         </script>
     <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/all.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/v4-shims.js"></script>
-    <script src="/veterinaria/js/duenos.js"></script>
+    <script src="/veterinaria-fullstack/frontend/js/duenos.js"></script>
 </body>
 
 </html>
