--- a/veterinaria-fullstack/frontend/consultas.html
+++ b/veterinaria-fullstack/frontend/consultas.html
@@ -29,7 +29,7 @@
                 <div class="collapse navbar-collapse" id="navbarColor01">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/veterinaria/index.html">Mascotas</a>
+                            <a class="nav-link active" aria-current="page" href="/veterinaria-fullstack/frontend/index.html">Mascotas</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/veterinaria-fullstack/frontend/index.html">Veterinari@s</a>
@@ -128,7 +128,7 @@
         </script>
     <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/all.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/v4-shims.js"></script>
-    <script src="/veterinaria/js/consultas.js"></script>
+    <script src="/veterinaria-fullstack/frontend/js/consultas.js"></script>
 </body>
 
 </html>
