se agrego camilo

--- a/veterinaria-fullstack/frontend/index.html
+++ b/veterinaria-fullstack/frontend/index.html
@@ -111,6 +111,7 @@
                                     <option>Esteban</option>
                                     <option>Francisco</option>
                                     <option>Jeremias</option>
+                                    <option>Camilo</option>
                                 </select>
                             </div>
                         </div>
