--- a/veterinaria-fullstack/frontend/index.html
+++ b/veterinaria-fullstack/frontend/index.html
@@ -11,7 +11,7 @@
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css" />
-    <link href="/veterinaria/css/styles.css" rel="stylesheet" />
+    <link href="./css/styles.css" rel="stylesheet" />
     <title>Veterinaria</title>
 </head>
 
@@ -150,7 +150,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/all.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/v4-shims.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-    <script src="/veterinaria-fullstack/frontend/js/mascotas.js"></script>
+    <script src="./js/mascotas.js"></script>
 </body>
 
 </html>
