--- a/veterinaria-fullstack/frontend/veterinarias.html
+++ b/veterinaria-fullstack/frontend/veterinarias.html
@@ -11,7 +11,7 @@
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css" />
-    <link href="/veterinaria/css/styles.css" rel="stylesheet" />
+    <link href="./css/styles.css" rel="stylesheet" />
     <title>Veterinaria</title>
 </head>
 
@@ -53,9 +53,15 @@
         <!-- Inicio Button trigger modal -->
         <h1>Veterinari@s</h1>
         <div class="actions-menu">
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                Nuevo
-            </button>
+            <div class="actions-menu-content">
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    Nuevo
+                </button>
+                <div class="alert alert-danger alert-dismissible" role="alert" id="alert">
+                    <strong>Oops!</strong> Algo hicimos mal, por favor vuelve a intentarlo!
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+            </div>
         </div>
         <!-- Fin button modal -->
 
@@ -64,10 +70,9 @@
             <thead class="table-dark">
                 <tr>
                     <th scope="col">#</th>
-                    <th scope="col">Identificacion</th>
-                    <th scope="col">País</th>
                     <th scope="col">Nombre</th>
                     <th scope="col">Apellido</th>
+                    <th scope="col">Documento</th>
                     <th scope="col"></th>
                 </tr>
             </thead>
@@ -91,7 +96,7 @@
                     <form id="form">
                         <input type="hidden" id="indice">
                         <div class="row">
-                            <div class="col">
+                            <!-- <div class="col">
                                 <select id="pais" class="form-select" aria-label="Default select example">
                                     <option>Pais</option>
                                     <option>Ecuador</option>
@@ -99,10 +104,10 @@
                                     <option>Venezuela</option>
                                     <option>Argentina</option>
                                 </select>
-                            </div>
+                            </div> -->
                             <div class="col">
-                                <input id="identificacion" type="text" name="identificacion" class="form-control"
-                                    placeholder="Identificacion">
+                                <input id="documento" type="text" name="documento" class="form-control"
+                                    placeholder="documento">
                             </div>
                         </div>
                         <div class="row">
@@ -140,7 +145,7 @@
         </script>
     <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/all.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/v4-shims.js"></script>
-    <script src="/veterinaria-fullstack/frontend/js/veterinarias.js"></script>
+    <script src="./js/veterinarias.js"></script>
 </body>
 
 </html>
