--- a/veterinaria-fullstack/frontend/veterinarias.html
+++ b/veterinaria-fullstack/frontend/veterinarias.html
@@ -29,10 +29,12 @@
                 <div class="collapse navbar-collapse" id="navbarColor01">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/veterinaria-fullstack/frontend/index.html">Mascotas</a>
+                            <a class="nav-link active" aria-current="page"
+                                href="/veterinaria-fullstack/frontend/index.html">Mascotas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/veterinaria-fullstack/frontend/veterinarias.html">Veterinari@s</a>
+                            <a class="nav-link"
+                                href="/veterinaria-fullstack/frontend/veterinarias.html">Veterinari@s</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/veterinaria-fullstack/frontend/consultas.html">Consultas</a>
@@ -96,29 +98,24 @@
                     <form id="form">
                         <input type="hidden" id="indice">
                         <div class="row">
-                            <!-- <div class="col">
-                                <select id="pais" class="form-select" aria-label="Default select example">
-                                    <option>Pais</option>
-                                    <option>Ecuador</option>
-                                    <option>Bolivia</option>
-                                    <option>Venezuela</option>
-                                    <option>Argentina</option>
-                                </select>
-                            </div> -->
                             <div class="col">
                                 <input id="documento" type="text" name="documento" class="form-control"
                                     placeholder="documento">
                             </div>
                         </div>
                         <div class="row">
+
                             <div class="col">
                                 <input id="nombre" type="text" name="nombre" class="form-control" placeholder="Nombre">
                             </div>
+                        </div>
+                        <div class="row">
                             <div class="col">
                                 <input id="apellido" type="text" name="apellido" class="form-control"
                                     placeholder="Apellido">
                             </div>
                         </div>
+
                     </form>
                 </div>
                 <div class="modal-footer">
@@ -145,6 +142,7 @@
         </script>
     <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/all.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/v4-shims.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>    
     <script src="./js/veterinarias.js"></script>
 </body>
 
