nuevo por nueva

--- a/veterinaria-fullstack/frontend/veterinarias.html
+++ b/veterinaria-fullstack/frontend/veterinarias.html
@@ -57,7 +57,7 @@
         <div class="actions-menu">
             <div class="actions-menu-content">
                 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                    Nuevo
+                    Nueva
                 </button>
                 <div class="alert alert-danger alert-dismissible" role="alert" id="alert">
                     <strong>Oops!</strong> Algo hicimos mal, por favor vuelve a intentarlo!
@@ -115,7 +115,6 @@
                                     placeholder="Apellido">
                             </div>
                         </div>
-
                     </form>
                 </div>
                 <div class="modal-footer">
