--- a/veterinaria-fullstack/frontend/consultas.html
+++ b/veterinaria-fullstack/frontend/consultas.html
@@ -64,10 +64,11 @@
             <thead class="table-dark">
                 <tr>
                     <th scope="col">#</th>
-                    <th scope="col">Nombre</th>
-                    <th scope="col">Apellido</th>
-                    <th scope="col">Email</th>
-                    <th scope="col"></th>
+                    <th scope="col">Mascota</th>
+                    <th scope="col">Veterinari@</th>
+                    <th scope="col">Diagnostico</th>
+                    <th scope="col">Creado</th>
+                    <th scope="col">Editado</th>
                 </tr>
             </thead>
             <tbody id="lista-consultas">
