--- a/veterinaria-fullstack/frontend/consultas.html
+++ b/veterinaria-fullstack/frontend/consultas.html
@@ -5,7 +5,6 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
@@ -29,7 +28,8 @@
                 <div class="collapse navbar-collapse" id="navbarColor01">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/veterinaria-fullstack/frontend/index.html">Mascotas</a>
+                            <a class="nav-link active" aria-current="page"
+                                href="/veterinaria-fullstack/frontend/index.html">Mascotas</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/veterinaria-fullstack/frontend/index.html">Veterinari@s</a>
@@ -88,19 +88,24 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <form id="form">
+                    <form action="">
                         <input type="hidden" id="indice">
+                        <div class="row">
+                            <div class="col">
+                                <select class="form-control" id="mascota">
+                                    <option>Seleccione Mascota</option>
+                                </select>
+                            </div>
+                        </div>
                         <div class="row">
                             <div class="col">
                                 <input id="nombre" type="text" name="nombre" class="form-control" placeholder="Nombre">
                             </div>
+                        </div>
+                        <div class="row">
                             <div class="col">
                                 <input id="apellido" type="text" name="apellido" class="form-control"
                                     placeholder="Apellido">
-                            </div>
-                            <div class="col">
-                                <input id="email" type="email" name="email" class="form-control" 
-                                placeholder="Email">
                             </div>
                         </div>
                     </form>
