--- a/veterinaria-fullstack/frontend/consultas.html
+++ b/veterinaria-fullstack/frontend/consultas.html
@@ -99,13 +99,9 @@
                         </div>
                         <div class="row">
                             <div class="col">
-                                <input id="nombre" type="text" name="nombre" class="form-control" placeholder="Nombre">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col">
-                                <input id="apellido" type="text" name="apellido" class="form-control"
-                                    placeholder="Apellido">
+                                <select class="form-control" id="veterinaria">
+                                    <option>Seleccione Veterinari@</option>
+                                </select>
                             </div>
                         </div>
                     </form>
