--- a/veterinaria-fullstack/frontend/consultas.html
+++ b/veterinaria-fullstack/frontend/consultas.html
@@ -104,6 +104,22 @@
                                 </select>
                             </div>
                         </div>
+                        <div class="row">
+                            <div class="col">
+                                <textarea class="form-control" placeholder="Historia"></textarea>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <select class="form-control" id="diagnostico">
+                                    <option>Seleccionar diagnostico</option>
+                                    <option>Prurito de piel (sarna)</option>
+                                    <option>Moquillo</option>
+                                    <option>Trauma cefálico</option>
+                                    <option>Parvovirosis</option>
+                                </select>
+                            </div>
+                        </div>
                     </form>
                 </div>
                 <div class="modal-footer">
