--- a/veterinaria-fullstack/frontend/duenos.html
+++ b/veterinaria-fullstack/frontend/duenos.html
@@ -112,8 +112,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                    <button type="button" id="btn-guardar" class="btn btn-primary"
-                        data-bs-dismiss="modal">Crear</button>
+                    <button type="button"  class="btn btn-primary" data-bs-dismiss="modal" id="btn-guardar">Crear</button>
                 </div>
             </div>
         </div>
